Camlp5 Version 4.04:
---------------------

* [11 Jul 07] Renamed application as "camlp5".
* [11 Jul 07] Fixed compilation problems with ocaml version 3.08.1.

Camlp4s Version 4.03:
---------------------

* [10 Jul 07] Added argument "-name" in "configure" to specify another name
  of commands and libraries (default = camlp4). E.g. "configure -name camlp5"
  will build "camlp5", "camlp5r", "camlp5o", "camlp5.1", and so on, and
  the library directory will be installed in ocaml library directory as
  name "camlp5".
* [10 Jul 07] Deleted command "mkcamlp4" which seems not to work any more.
  This will be fixed in a future version.

Camlp4s Version 4.02:
---------------------

* [08 Jul 07] Added missing compatibility with ocaml 3.10.0
* [05 Jul 07] Rebuilt pretty printers with new pretty printer module
* [27 Jun 07] Added private flag in type declarations and with constraints
* [21 Jun 07] Added "let..in" in parsers
* [14 Jun 07] Added html documentation for:
  - the "extfun" statement
  - the "fparser" statement
  - the "lexer" statement
  - the "parser" statement
  - the "#pragma" directive
  - the module Pretty
  - the new pretty print in Camlp4 (using Pretty and "extfun")
* [14 Jun 07] Library module Sformat renamed Pretty. The first parameter
  of the function horiz_vertic is now a function of type "unit -> 'a".
* [31 May 07] Quotation "row_field" renamed "poly_variant".
* [03 May 07] Fixed bug in pr_o: did not print "let f ?a = ()".

Camlp4s Version 4.01:
---------------------

* [27 Apr 07] Added compatibility with ocaml 3.11

Camlp4s Version 4.00:
---------------------

* [31 Jan 07] Added a new syntax, "lexer", to write parsers of characters
  in a shorter way. New syntax extension "pa_lex.cmo".

* [26 Jan 07] Deleted "LOCATE" lexing token kind and associated parsing
  stuff. Seems to be an old thing never used.

* [20 Jan 07] Added "lookahead" stream pattern component kind.
          syntax ::= "?=" list lookhd_patt sep_by "|"