@@ -10,9 +10,9 @@
 (*                                                                     *)
 (***********************************************************************)
 
-(* $Id: pcaml.ml,v 1.3 2007/07/11 14:59:50 deraugla Exp $ *)
+(* $Id: pcaml.ml,v 1.4 2007/07/12 01:58:27 deraugla Exp $ *)
 
-value version = "4.04";
+value version = "4.05-exp";
 value syntax_name = ref "";
 
 value gram =
